--- a/share/1.spark_mode.ipynb
+++ b/share/1.spark_mode.ipynb
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/09/30 06:31:52 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/10/02 05:35:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/09/30 06:31:54 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "25/10/02 05:36:01 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/09/30 06:31:54 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "25/10/02 05:36:01 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/09/30 06:31:54 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "25/10/02 05:36:01 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c8910270-6427-4ea4-9c4d-db4143c9fcf3",
    "metadata": {},
    "outputs": [
@@ -188,12 +188,12 @@
     "# 导入 CSV 文件 (使用本地文件系统路径)\n",
     "df_local = spark.read.option(\"header\", \"true\") \\\n",
     "    .option(\"inferSchema\", \"true\") \\\n",
-    "    .csv(\"file:///opt/share/data/PRSA_data_2010.1.1-2014.12.31.csv\")"
+    "    .csv(\"file:///opt/share/spark_data/PRSA_data_2010.1.1-2014.12.31.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "84b24b43-f44b-4bce-965d-7236258c0693",
    "metadata": {},
    "outputs": [
@@ -236,8 +236,11 @@
     "# 查看 hdfs 集群状态\n",
     "hdfs dfsadmin -report\n",
     "\n",
+    "# 创建 hdfs 路径\n",
+    "hdfs dfs -mkdir -p /user/root\n",
+    "\n",
     "# 将本地数据上传到 hdfs\n",
-    "hdfs dfs -put /opt/share/data/PRSA_data_2010.1.1-2014.12.31.csv /user/root/PRSA_data_2010.1.1-2014.12.31.csv\n",
+    "hdfs dfs -put /opt/share/spark_data/PRSA_data_2010.1.1-2014.12.31.csv /user/root/PRSA_data_2010.1.1-2014.12.31.csv\n",
     "\n",
     "# 检查上传是否成功\n",
     "hdfs dfs -ls /user/root/\n",
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "f56b92a0-e63f-46f4-b87e-2504dc708527",
    "metadata": {},
    "outputs": [],
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ada8e10a-6bd6-4be5-85df-39d5ba2cf64b",
    "metadata": {},
    "outputs": [
@@ -309,19 +312,39 @@
    "source": [
     "## 四、使用 `spark-submit` 提交 Python 任务\n",
     "\n",
-    "脚本已在 `explore.py` 和 `submit.sh` 中写好。\n",
+    "脚本已在 `spark.py` 和 `spark-submit.sh` 中写好。\n",
     "\n",
     "运行以下代码提交任务：\n",
     "\n",
     "```bash\n",
-    "bash submit.sh\n",
+    "bash spark-submit.sh\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e76b2fb-c3ad-4d8f-89ec-5ab55500b16f",
+   "metadata": {},
+   "source": [
+    "## 五、使用 `hive -f` 提交 Hive 任务\n",
+    "\n",
+    "两种用法：\n",
+    "- `hive -f [文件名]`\n",
+    "- `hive -e [SQL代码]`\n",
+    "\n",
+    "脚本已在 `hive-submit.sh` 中写好。\n",
+    "\n",
+    "运行以下代码提交任务：\n",
+    "\n",
+    "```bash\n",
+    "bash hive-submit.sh\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9534f271-a53f-4f4a-85f7-c859d43820dc",
+   "id": "eaebc34c-a0d0-4496-b469-44cc9d1941a6",
    "metadata": {},
    "outputs": [],
    "source": []
