--- a/share/2.explore.ipynb
+++ b/share/2.explore.ipynb
@@ -28,7 +28,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25/09/30 09:53:28 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/10/02 05:42:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/10/02 05:42:33 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
